Kubernetes/apps/prod/security/policies/clusterpolicy-restrict-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: block-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - security
      validate:
        message: Privileged containers are not allowed outside approved namespaces.
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
